--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /storage/*.key
 /vendor
 .env
+.env.backup
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
@@ -11,4 +12,3 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-.vs
